Block setting ways, fix sections in region utils, and so on